updates to fix linux issues

--- a/client/scripts/resources/dashr.desktop
+++ b/client/scripts/resources/dashr.desktop
@@ -6,3 +6,5 @@ Icon=__INSTALL_DIR__/client/icons/current.png
 Terminal=false
 Type=Application
 Categories=Game;
+StartupNotify=true
+StartupWMClass=Dashr
